--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,7 @@
 body{
 width: 100%;
 height: 100%;
+background-color: #E5E5E5;
 }
 .topo{
     color: #ffffff;
@@ -59,4 +60,8 @@ height: 100%;
     padding-right: 21px;
     box-sizing: border-box;
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%),url(imagem.jpeg);
+}
+
+a{
+    text-decoration: none;
 }
