--- a/style.css
+++ b/style.css
@@ -51,9 +51,6 @@ input{
     flex-direction: column;   
 }
 
-.exibir{
-    display: flex;
-}
 .tittle{
     font-weight: 700;
     font-size: 23px;
@@ -150,7 +147,7 @@ img{
 }
 /* Quiz pronto*/
 .finalizar-quizz{
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
 }
@@ -173,4 +170,8 @@ img{
     padding-right: 21px;
     box-sizing: border-box;
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 70%, #000000 100%),url(imagem.jpeg);
+}
+
+.exibir{
+    display: flex;
 }
