--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ body{
     background-color: #E5E5E5;
     font-family: 'Roboto',sans-serif;
     }
-    .topo{
+ a{
+        text-decoration: none;
+    }
+ .topo{
         color: #ffffff;
         font-size: 37px;
         font-weight: 700;
@@ -16,7 +19,7 @@ body{
         justify-content: center;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         margin-bottom: 50px;
-    }
+}
 
 /* primeiras informções*/
 .info-iniciais{
@@ -171,7 +174,10 @@ img{
     box-sizing: border-box;
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 70%, #000000 100%),url(imagem.jpeg);
 }
-
+.h2{
+    color: #000000;
+}
 .exibir{
     display: flex;
 }
+
