--- a/style.css
+++ b/style.css
@@ -184,10 +184,24 @@ img{
     display: flex;  
 }
 .color :nth-child(1){
-    width: 500px;
+    width: 450px;
 }
 .color :nth-child(2){
     width: 65px;
     margin: 0;
     padding: 0;
+}
+
+.color :nth-child(3){
+    width: 50px;
+    height:44px;
+    border-radius: 5px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #D1D1D1;
+    color:#BABABA;
+    ;
 }
