--- a/estiloquiz.css
+++ b/estiloquiz.css
@@ -49,12 +49,12 @@ a{
     display: flex;
     width: 100%;
     height: 140px;
-    background-color: #434CA0;
     justify-content: center;
     align-items: center;
     font-weight: Bold;
     Font-size: 23px;
     line-height: 27px;
+    color: white;
     
 
 }
@@ -85,6 +85,85 @@ a{
 .textoresposta{
     margin-top: 7px;
     box-sizing: border-box;
+}
+.resultado {
+    width: 759px;
+    height: 430px;
+    background-color: #FFFFFF;
+    margin-top: 44px;
+    box-sizing: border-box;
+    padding: 16px;
+}
+.resultado2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+.imgresultado {
+   width: 364px;
+   height: 273px;
+   background-color: brown;
+   margin-top: 18px;
+   margin-right: 18px;
+}
+.tituloresultado {
+    width: 727px;
+    height: 99px;
+    background-color: #EC362D ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: Bold;
+    Font-size: 23px;
+    line-height: 27px;
+    color: white;
+}
+
+.mensagemresultado {
+    width: 364px;
+   height: 273px;
+   margin-top: 18px;
+   font-weight: 700;
+   font-size: 19px;
+   line-height: 25px;
+}
+.reiniciar {
+    display: flex;
+    font-weight: 400;
+    font-size: 21px;
+    color: #FFF5F4;
+    background-color: #EC362D;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    width: 260px;
+    height: 55px;
+    margin-top: 57px;
+}
+.voltarhome{
+    display: flex;
+    width: 220px;
+    height: 55px;
+    margin-top: 16px;
+    margin-bottom: 85px;
+    color: #818181;
+    font-size: 21px;
+    line-height: 25px;
+    justify-content: center;
+    align-items: center;
+}
+.opaco {
+    opacity: 0.3;
+
+}
+.ptrue.opaco{
+    color: #009C22;
+}
+.pfalse.opaco{
+    color: #FF4B4B;
+}
+.selecionada {
+    opacity: 1;
 }
 @media (max-width: 375px) {
 .mainimgquiz{
