--- a/estiloquiz.css
+++ b/estiloquiz.css
@@ -29,6 +29,9 @@ a{
 
 }
 .mainimgquiz {
+    position: absolute;
+    top: 0;
+    right: 0;
     width: 100%;
     height: 227px;
     background-color: #EC362D;
@@ -122,6 +125,23 @@ a{
     width: 330px; 
     height: 175px;
 }
+.imagemetituloquiz {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 227px;
+    color: white;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+
+}
+.tituloquiz {
+    z-index: 10;
+    font-size: 24px;
+
+}
 .mensagemresultado {
     width: 364px;
    height: 273px;
@@ -192,7 +212,7 @@ a{
 .respostas {
     display: flex;
     width: 46%;
-    height: 35%;
+    height: 200px;
     box-sizing: border-box;
 }
 .mensagemresultado {
@@ -205,7 +225,7 @@ a{
 }
 .resultado {
     width: 100%;
-    height: auto;
+    height: 700px;
 }
 .resultado2 {
     flex-direction: column;
@@ -216,13 +236,17 @@ a{
 }
 .imgresultado {
     width: 100%;
-    height: auto;
+    height: 400px;
     margin-right: 0px;
 }
 .todasrespostas {
     flex-wrap: wrap;
     width: 100%;
-    height: auto;
+    height: 600px;
+}
+.imagemetituloquiz {
+    height: 142px;   
+
 }
 
 }
