--- a/estilo.css
+++ b/estilo.css
@@ -62,7 +62,29 @@ font-family: 'Roboto',sans-serif;
     box-sizing: border-box;
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 70%, #000000 100%),url(imagem.jpeg);
 }
+.quiz-02{
+    width: 340px;
+    height: 181px;
 
+    border-radius: 5px;
+    margin: 15px;
+    color: #ffffff;
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 22px;
+    justify-content: end;
+    align-items: flex-end;
+    display: flex;
+    padding-bottom: 7px ;
+    padding-left: 18px;
+    padding-right: 21px;
+    box-sizing: border-box;
+    
+}
+.imgquizes {
+    width: 340px;
+    height: 181px;
+}
 a{
     text-decoration: none;
 }
