--- a/estilo.css
+++ b/estilo.css
@@ -94,7 +94,7 @@ font-family: 'Roboto',sans-serif;
     left: 4px;
     z-index: 10;
     max-width: 300px;
-    line-break: normal;
+    line-break: anywhere;
 }
 a{
     text-decoration: none;
