--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ img{
     padding-left: 18px;
     padding-right: 21px;
     box-sizing: border-box;
-    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 70%, #000000 100%),url(imagem.jpeg);
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 70%, #000000 100%),url(var(urlimagemdoquizz));
 }
 .h2{
     color: #000000;
