--- a/estilo.css
+++ b/estilo.css
@@ -17,26 +17,82 @@ font-family: 'Roboto',sans-serif;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .todos{
-    margin: 15px;
+   
+   
+   
 }
 .Seus{
-    margin: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
 }
-.conteudo{
+.meus{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.meusquizes{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+}
+.semquizz{
+   
+    border-radius: 5px;
+    display:none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:73% ;
+    height: 181px;
+    border: 1px solid  #D4D4D4;
+}
+.quizesserver{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
 }
-.titulo{
-    margin-left:15px;
+.tituloseus{
+    margin-left:13.5%;
     font-size: 20px;
     font-weight: 700;
     line-height: 23px;
-
+    display: none;
+    align-items: center;
 }
-.titulo{
+.titulotodos{
+    margin-left:13%;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 23px;
     display: flex;
     align-items: center;
 }
+.aparece{
+    display:flex;
+}
+
+
+.semquizz h2{
+    color:#EC362D;
+    margin-top: 10px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 151px;
+    border: 1px dashed #EC362D;
+    border-radius: 50px;
+}
+
 .icon{
     font-size: 30px;
     color: #EC362D;
@@ -44,9 +100,10 @@ font-family: 'Roboto',sans-serif;
    
 }
 .quiz-01{
+    position: relative;
     width: 340px;
     height: 181px;
-
+    border: 1px solid  #D4D4D4;
     border-radius: 5px;
     margin: 15px;
     color: #ffffff;
@@ -56,17 +113,15 @@ font-family: 'Roboto',sans-serif;
     justify-content: end;
     align-items: flex-end;
     display: flex;
-    padding-bottom: 7px ;
-    padding-left: 18px;
-    padding-right: 21px;
     box-sizing: border-box;
-    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 70%, #000000 100%),url(imagem.jpeg);
+    
+    
 }
 .quiz-02{
     position: relative;
     width: 340px;
     height: 181px;
-
+    border: 1px solid  #D4D4D4;
     border-radius: 5px;
     margin: 15px;
     color: #ffffff;
@@ -76,12 +131,13 @@ font-family: 'Roboto',sans-serif;
     justify-content: end;
     align-items: flex-end;
     display: flex;
-    padding-bottom: 7px ;
-    padding-left: 18px;
-    padding-right: 21px;
     box-sizing: border-box;
     overflow: hidden;
     
+}
+.quiz-01 img{
+    width: 100%;
+    height: 100%;
 }
 .imgquizes {
     width: 100%;
@@ -90,8 +146,8 @@ font-family: 'Roboto',sans-serif;
 }
 .nomequiz {
     position: absolute;
-    bottom: 30px;
-    left: 4px;
+    bottom: 15px;
+    left: 10px;
     z-index: 10;
     max-width: 300px;
     line-break: anywhere;
