--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ input{
     font-weight: 400;
     font-size: 21px;
     line-height: 25px;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 a{
     text-decoration: none;
@@ -172,7 +172,37 @@ img{
     padding-left: 18px;
     padding-right: 21px;
     box-sizing: border-box;
-    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 70%, #000000 100%),url(var(urlimagemdoquizz));
+    
+}
+.quiz-02{
+    position: relative;
+    width: 500px;
+    height: 266px;
+    border: 1px solid  #D4D4D4;
+    border-radius: 5px;
+    margin: 15px;
+    color: #ffffff;
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 22px;
+    align-items: flex-end;
+    display: flex;
+    box-sizing: border-box;
+    overflow: hidden;
+    margin-bottom: 45px;
+}
+.imgquizes {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+.nomequiz {
+    position: absolute;
+    bottom: 15px;
+    left: 10px;
+    z-index: 10;
+    max-width: 300px;
+    line-break: anywhere;
 }
 .h2{
     color: #000000;
